--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,12 @@ target/
 *.cache.xml
 *.spatialos/
 *.iml
-workers/gsim/project
-workers/gsim/build.json
-workers/gsim/spatialos_nexus.sbt
-workers/gsim/spatialos_pack.sbt
-workers/gsim/src/main/resources/**
-workers/particle-java/worker-sdk
-workers/particle-java/spatialos.java.build.json
-workers/particle-java/pom.xml
+workers/../worker-sdk
+workers/../spatialos.java.build.json
+workers/../pom.xml
 .improbable
 output.snapshot
-workers/gsim/spatialos.gsim.build.json
 .gradle
+workers/*/gradle/
+workers/*/gradlew
+workers/*/gradlew.bat
