--- a/workers/theia/package.json
+++ b/workers/theia/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "google-protobuf": "3.2.0",
+    "paper": "^0.11.3",
     "spatialos_worker_sdk": "file:./dependencies/javascript_sdk/"
   },
   "devDependencies": {
@@ -15,6 +16,10 @@
     "babel-core": "6.23.1",
     "babel-loader": "6.3.2",
     "babel-register": "6.23.0",
+    "babel-preset-es2015": "6.22.0",
+    "babel-preset-react": "6.23.0",
+    "babel-preset-stage-2": "6.22.0",
+    "babel-polyfill": "6.23.0",
     "webpack": "1.14.0"
   }
 }
