--- a/proxy/package.json
+++ b/proxy/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.15.3",
-    "socket.io": "^2.0.2"
+    "socket.io": "^2.0.2",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {},
   "scripts": {
